Fix baseline jumping

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -87,14 +87,15 @@
     // Close icon ----------------------
 
     .close-icon {
-      top: .75em;
-      right: .75em;
+      top: .77em; // shoule be .75em but that messes up the pixel snapping
+      right: .77em;
       z-index: 2;
+      font-size: 1em;
       width: 1.5em;
       height: 1.5em;
       line-height: 1.5;
-      text-align: center;
       border-radius: @component-border-radius;
+      overflow: hidden;
       transform: scale(0);
       transition: transform .08s;
       &:hover {
@@ -105,9 +106,17 @@
         background-color: fade(@base-accent-color, 50%);
       }
       &::before {
-        font-size: inherit;
-        width: auto;
-        height: auto;
+        content: "\f05d"; // plus icon has a smaller weight
+        position: absolute;
+        font-size: 4em; // blow it up
+        width: 1.5em; // same as parent
+        height: 1.5em; // same as parent
+        line-height: 1.5; // same as parent
+        text-align: center;
+        transform: translate(-37.5%, -37.5%) // center: - (1.5 / 4)
+                   rotate(45deg) // rotate (since it's the "+" icon)
+                   scale(.33)  ; // scale it down again
+        pointer-events: none;
       }
     }
     &:hover .close-icon {
